--- a/Letlakala_la_pele.mw
+++ b/Letlakala_la_pele.mw
@@ -9,3 +9,33 @@
 | width="15%"|
 {{Letlakala_la_PeleMp3}}
 |}
+{{nobots}}
+
+[[af:]]
+[[ar:]]
+[[de:]]
+[[en:]]
+[[el:]]
+[[es:]]
+[[fa:]]
+[[fr:]]
+[[gu:]]
+[[he:]]
+[[hi:]]
+[[ja:]]
+[[pl:]]
+[[pt:]]
+[[sa:]]
+[[st:]]
+[[ss:]]
+[[ta:]]
+[[te:]]
+[[tn:]]
+[[tr:]]
+[[ts:]]
+[[ur:]]
+[[ve:]]
+[[vi:]]
+[[xh:]]
+[[zu:]]
+[[zh:]]
