*Empty MediaWiki Message*

--- a/Chile.mw
+++ b/Chile.mw
@@ -25,6 +25,9 @@
 * [[Bolivia]]
 * [[Pacific Ocean]]
 
+== <!-- External links --> ==
+* [http://www.thisischile.cl/ ThisisChile.cl - Official Chile website - English and Spanish version]
+
 [[Setensele:Chile]]
 
 [[es:Chile]]
