*Empty MediaWiki Message*

--- a/Concepción,_Chile.mw
+++ b/Concepción,_Chile.mw
@@ -1,6 +1,32 @@
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''Concepción'''</big></big><br />''La Concepción de María Purísima del Nuevo Extremo''
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="140px" | [[Beureukaih:Coat of arms of Concepcion, Chile.svg|100px]]
+| align="center" width="140px" | [[Beureukaih:Comuna de Concepción.svg|right|100px]]
+|}
+|-
+| align=center colspan=2 | [[Beureukaih:Concepcion-Chile(001).jpg|center|250px]]
+|}
+
 '''Concepción''' ke tôrôpô ya [[Chile]]. 216.061 badudi ([[2002]]). Bogolo: 221,6 km².
 
+* '''[http://tools.wikimedia.de/~magnus/geo/geohack.php?language=en&params=36_46_22_S_73_03_47_W 36° 46' 22" S 73° 03' 47" W]'''
+
+<gallery perrow=4>
+File:Arco de Medicina UdeC.jpg|
+File:Moderno Edificio en Concepción.jpg|
+File:Desembocadura del Biobío.jpg|
+File:Ex Catedral de Concepción.jpg|
+File:Biobus01.jpg|
+File:Hotel El Araucano.JPG|
+File:Plaza de Armas Concepción.jpg|
+</gallery>
+
 == External links ==
+* [http://commons.wikimedia.org/wiki/Concepcion,_Chile Commons:Concepción]
 * [http://www.concepcion.cl Official Website] {es}
 
 [[Setensele:Chile]]
