*Empty MediaWiki Message*

--- a/Concepción,_Chile.mw
+++ b/Concepción,_Chile.mw
@@ -4,11 +4,11 @@
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
-| align="center" width="140px" | [[Beureukaih:Coat of arms of Concepcion, Chile.svg|100px]]
-| align="center" width="140px" | [[Beureukaih:Comuna de Concepción.svg|right|100px]]
+| align="center" width="140px" | [[file:Coat of arms of Concepcion, Chile.svg|100px]]
+| align="center" width="140px" | [[file:Comuna de Concepción.svg|right|100px]]
 |}
 |-
-| align=center colspan=2 | [[Beureukaih:Concepcion-Chile(001).jpg|center|250px]]
+| align=center colspan=2 | [[file:Concepcion-Chile(001).jpg|center|250px]]
 |}
 
 '''Concepción''' ke tôrôpô ya [[Chile]]. 216.061 badudi ([[2002]]). Bogolo: 221,6 km².
