*Empty MediaWiki Message*

--- a/Chile.mw
+++ b/Chile.mw
@@ -25,6 +25,12 @@
 * [[Bolivia]]
 * [[Pacific Ocean]]
 
+== ==
+* [[Toropo Kgolo]]: [[Santiago de Chile]]
+* [[Mmušo]]: [[Republic]]
+* [[Bogolo ba Naga]]: 756,102 km²
+* [[Palo ya Badudi]]: 17,402,630
+
 == <!-- External links --> ==
 * [http://www.thisischile.cl/ ThisisChile.cl - Official Chile website - English and Spanish version]
 
