*Empty MediaWiki Message*

--- a/Concepción,_Chile.mw
+++ b/Concepción,_Chile.mw
@@ -11,7 +11,7 @@
 | align=center colspan=2 | [[file:Concepcion-Chile(001).jpg|center|250px]]
 |}
 
-'''Concepción''' ke tôrôpô ya [[Chile]]. 216.061 badudi ([[2002]]). Bogolo: 221,6 km².
+'''Concepción''' ([[IPA]]: [kon.sepˈsjon]) ke tôrôpô ya [[Chile]]. 216.061 badudi ([[2002]]). Bogolo: 221,6 km².
 
 * '''[http://tools.wikimedia.de/~magnus/geo/geohack.php?language=en&params=36_46_22_S_73_03_47_W 36° 46' 22" S 73° 03' 47" W]'''
 
