*Empty MediaWiki Message*

--- a/Chile.mw
+++ b/Chile.mw
@@ -16,7 +16,7 @@
 | align=center colspan=2 | [[File:CHL orthographic.svg|300px]]
 |}
 
-'''Chile''' ke naga lefasaneng la [[Amerika]]. ''Chile'' e bodikela ba [[Amerika]], e wela seleteng sa [[Amerika Borwa]].
+'''Chile''' ([[IPA]]: [ˈtʃɪleɪ]) ke naga lefasaneng la [[Amerika]]. ''Chile'' e bodikela ba [[Amerika]], e wela seleteng sa [[Amerika Borwa]].
 
 ''Chile'' e agišane le :
 
