*Empty MediaWiki Message*

--- a/Gauteng.mw
+++ b/Gauteng.mw
@@ -11,7 +11,7 @@
 |-
 |'''Toropo ye kgolo kgolo''' || [[Johannesburg]]
 |-
-|'''Tonakgolo''' || [[Mbhazima Shilowa]] ([[African National Congress|ANC]])
+|'''Tonakgolo''' || [[Nomvula Mokonyane]] ([[African National Congress|ANC]])
 |-
 | colspan=2 align=right style="padding: 0 5px 0 5px" |
 |}
