*Empty MediaWiki Message*

--- a/Fora.mw
+++ b/Fora.mw
@@ -40,7 +40,7 @@
 
 '''Fora''' ke naga yeo elego lefasaneng la [[Europa]].
 
-[[Setensele:Main category]]
+[[Setensele:Europa]]
 
 [[vep:Francii]]
 
