*Empty MediaWiki Message*

--- a/Uganda.mw
+++ b/Uganda.mw
@@ -2,7 +2,7 @@
 |conventional_long_name   = Repabliki ya Uganda
 |common_name              = Uganda
 |image_flag               = Flag of Uganda.svg
-|image_coat               = Coat of Arms of Uganda.jpg
+|image_coat               = Coat of arms of Uganda.svg
 |image_map                = LocationUganda.svg
 |national_motto           = "For God and My Country"
 |official_languages       = [[Seisimane]], [[Seswahili]]
