*Empty MediaWiki Message*

--- a/Zimbabwe.mw
+++ b/Zimbabwe.mw
@@ -3,7 +3,7 @@
 |conventional_long_name   =Repabliki ya Zimbabwe 
 |common_name              =Zimbabwe
 |image_flag               =Flag of Zimbabwe.svg
-|image_coat               =
+|image_coat               =Coat of Arms of Zimbabwe.svg
 |image_map                =LocationZimbabwe.svg
 |capital                  =[[Harare]]
 |government_type          =[[wp/sno/Republic|Repabliki]]
