*Empty MediaWiki Message*

--- a/Tunisia.mw
+++ b/Tunisia.mw
@@ -2,7 +2,7 @@
 |conventional_long_name = Tunisian Repabliki
 |common_name = Tunisia
 |image_flag = Flag of Tunisia.svg
-|image_coat =
+|image_coat = Coat of arms of Tunisia.svg
 |image_map = Location_Tunisia.png
 |capital = [[Tunis]]
 |government_type = Republic
