*Empty MediaWiki Message*

--- a/Sudan.mw
+++ b/Sudan.mw
@@ -2,7 +2,7 @@
 |conventional_long_name   = Repabliki ya Sudan|
 common_name              = Sudan
 |image_flag               = Flag of Sudan.svg
-|image_coat               =
+|image_coat               =Coat of arms of Sudan.gif
 |image_map                = LocationSudan.svg
 |capital                  = [[Khartoum]]
 |government_type          = [[Government of National Unity]] (GONU)
