--- a/Egypt.mw
+++ b/Egypt.mw
@@ -3,7 +3,7 @@
 |common_name              = Egypt
 |image_flag               = Flag of Egypt.svg
 |image_coat               =Coat_of_arms_of_Egypt.svg
-|image_map                = LocationEgypt.svg
+|image_map                = Egypt in its region (undisputed).svg
 |capital                  = [[Cairo]]
 |government_type          = [[Semi-presidential system|Semi-presidential]] [[republic|repabliki]]   
 |leader_name1             = [[Hosni Mubarak]]
