*Empty MediaWiki Message*

--- a/Sudan.mw
+++ b/Sudan.mw
@@ -3,7 +3,7 @@
 common_name              = Sudan
 |image_flag               = Flag of Sudan.svg
 |image_coat               =Coat of arms of Sudan.gif
-|image_map                = LocationSudan.svg
+|image_map                = Sudan in its region (claimed).svg
 |capital                  = [[Khartoum]]
 |government_type          = [[Government of National Unity]] (GONU)
 |leader_name1             = [[Omar Hassan al-Bashir]]
