*Empty MediaWiki Message*

--- a/Kenya.mw
+++ b/Kenya.mw
@@ -4,7 +4,7 @@
 |common_name = Kenya
 |image_flag = Flag of Kenya.svg
 |image_coat =
-|image_map = LocationKenya.svg
+|image_map = Kenya in its region (de-facto).svg
 |capital = [[Nairobi]]
 |government_type = [[Republic|Repabliki]]
 |leader_name1 = [[Mwai Kibaki]]
