*Empty MediaWiki Message*

--- a/Tanzania.mw
+++ b/Tanzania.mw
@@ -5,7 +5,7 @@
 | width="130px"| [[Seswantšho:Flag_of_Tanzania.svg|125px|Flaga ya Tanzania]] || 
 |}
 |-
-| align=center colspan=2 style="background:#f9f9f9;" | [[Seswantšho:LocationTanzania.png|200px|Taetso ya Tanzania]]
+| align=center colspan=2 style="background:#f9f9f9;" | [[Seswantšho:Tanzania in its region.svg|200px|Taetso ya Tanzania]]
 |-
 |'''Toropo Kgolo''' || Dodoma, Dar es Salaam
 |-
