*Empty MediaWiki Message*

--- a/Réunion.mw
+++ b/Réunion.mw
@@ -8,7 +8,7 @@
 |-
 |'''Toropo Kgolo''' || Saint-Denis
 |-
-|'''Mopresidente''' || Paul Verges
+|'''Mopresidente''' || Didier Robert
 |-
 | colspan=2 align=right style="padding: 0 5px 0 5px" | 
 |}
@@ -17,6 +17,7 @@
 '''Réunion''' ke sehlakehlake seo selego [[Indian Ocean]]. Sewela lefasaneng la [[Afrika]].Réunion e bohlaba ba [[Madagascar]], se 200 km borwa ba [[Mauritius]].
 
 Somalia e wela seleteng sa [[Afrika Bohlabela]].
+{{Commons|Réunion|Reunion}}
 
 [[Setensele:Main category]]
 
