*Empty MediaWiki Message*

--- a/Somalia.mw
+++ b/Somalia.mw
@@ -5,7 +5,7 @@
 | width="130px"| [[Seswantšho:Flag_of_Somalia.svg|125px|Flaga ya Somalia]] || 
 |}
 |-
-| align=center colspan=2 style="background:#f9f9f9;" | [[Seswantšho:LocationSomalia.png|200px|Taetso ya Somalia]]
+| align=center colspan=2 style="background:#f9f9f9;" | [[Seswantšho:Somalia in its region (claimed).svg|200px|Taetso ya Somalia]]
 |-
 |'''Toropo Kgolo''' || Magadishu
 |-
