*Empty MediaWiki Message*

--- a/Rafael_Correa.mw
+++ b/Rafael_Correa.mw
@@ -1,7 +1,7 @@
 [[Seswantšho:Rafaelcorrea08122006.jpg|300px|thumb|right|Rafael Correa]]
 
 
-'''Nelson Rolihlahla Mandela''' (belegwe [[6 April]] [[1963]]) ebile presidente ya pele ya mmušô wa bantho wa [[Ecuador]].
+'''Rafael Vicente Correa Delgado''' (belegwe [[6 April]] [[1963]]) ebile presidente ya pele ya mmušô wa bantho wa [[Ecuador]].
 
 [[Setensele:Main category]]
 
