--- a/Ethiopia.mw
+++ b/Ethiopia.mw
@@ -3,7 +3,7 @@
 |common_name              = Ethiopia 
 |image_flag               = Flag of Ethiopia.svg
 |image_coat               Coat_of_arms_of_Ethiopia.svg
-|image_map                = LocationEthiopia.svg
+|image_map                = Ethiopia in its region.svg
 |capital                  = [[Addis Ababa]]
 |government_type          = [[Federal republic]]
 |leader_name1             = [[Girma Wolde-Giorgis]]
