--- a/Libya.mw
+++ b/Libya.mw
@@ -3,7 +3,7 @@
 |common_name = Libya
 |image_flag = Flag of Libya.svg
 |image_coat = Coat_of_arms_of_Libya.svg
-|image_map = LocationLibya.svg
+|image_map = Libya in its region.svg
 |capital = [[Tripoli]]
 |government_type = [[Jamahiriya]]
 |leader_name1 = [[Muammar al-Gaddafi]]
