*Empty MediaWiki Message*

--- a/Tunisia.mw
+++ b/Tunisia.mw
@@ -3,7 +3,7 @@
 |common_name = Tunisia
 |image_flag = Flag of Tunisia.svg
 |image_coat = Coat of arms of Tunisia.svg
-|image_map = Location_Tunisia.png
+|image_map = Tunisia in its region.svg
 |capital = [[Tunis]]
 |government_type = Republic
 |leader_name1 = [[Zine El Abidine Ben Ali]]
