--- a/Ethiopia.mw
+++ b/Ethiopia.mw
@@ -2,7 +2,7 @@
 |conventional_long_name   = Federal Democratic Republic of Ethiopia
 |common_name              = Ethiopia 
 |image_flag               = Flag of Ethiopia.svg
-|image_coat               Coat_of_arms_of_Ethiopia.svg
+|image_coat               = Coat_of_arms_of_Ethiopia.svg
 |image_map                = Ethiopia in its region.svg
 |capital                  = [[Addis Ababa]]
 |government_type          = [[Federal republic]]
