--- a/Peru.mw
+++ b/Peru.mw
@@ -1,1 +1,3 @@
 '''Peru''' ke naga [[lefasaneng]] la [[Amerika]]. Peru e bodikela ba [[Amerika]], e wela seleteng sa [[Amerika Borwa]].
+
+[[Setensele:Chile]]
