*Empty MediaWiki Message*

--- a/Peru.mw
+++ b/Peru.mw
@@ -1,3 +1,19 @@
+{{Country
+|conventional_long_name   = República del Perú  
+|common_name               = Republiki ya Peru
+|image_flag               = Flag of Peru.svg
+|image_coat               =Escudo_nacional_del_Perú.svg
+|image_map                = Peru (orthographic projection).svg
+|capital                  = [[Lima]] 
+|government_type          = [[Republic]]
+|leader_name1              = [[Ollanta Humala]] 
+|sovereignty_type         = 
+|area_km2                     = 1.285.216.20
+|population_estimate      = 30.165.000 (2012)
+|currency                 = Nuevo sol (S/.)
+|official_languages       = 
+}}
+
 '''Peru''' ke naga lefasaneng la [[Amerika]]. Peru e bodikela ba [[Amerika]], e wela seleteng sa [[Amerika Borwa]].
 
 [[Setensele:Peru]]
