*Empty MediaWiki Message*

--- a/Peru.mw
+++ b/Peru.mw
@@ -4,7 +4,7 @@
 |image_flag               = Flag of Peru.svg
 |image_coat               =Escudo_nacional_del_Perú.svg
 |image_map                = Peru (orthographic projection).svg
-|national_motto           = "{{lang|es|''Firme y feliz por la unión''}}"
+|national_motto           = Firme y feliz por la unión
 |capital                  = [[Lima]] 
 |government_type          = [[Republic]]
 |leader_name1              = [[Ollanta Humala]] 
