*Empty MediaWiki Message*

--- a/Cameroon.mw
+++ b/Cameroon.mw
@@ -2,7 +2,7 @@
 |conventional_long_name   = Repabliki ya Cameroon
 |common_name              = Cameroon
 |image_flag               = Flag of Cameroon.svg
-|image_coat               =Coat_of_arms_of_Cameroon.png
+|image_coat               =Coat of arms of Cameroon.svg
 |image_map                = LocationCameroon.svg
 |capital                  = [[Yaoundé]]
 |government_type          = [[Republic|Repabliki]]
