--- a/Libya.mw
+++ b/Libya.mw
@@ -2,7 +2,7 @@
 |conventional_long_name = Great Socialist People's Libyan Arab Jamahiriya
 |common_name = Libya
 |image_flag = Flag of Libya.svg
-|image_coat = Seal of the Republic of Libya.jpg
+|image_coat = 
 |image_map = Libya in its region.svg
 |capital = [[Tripoli]]
 |government_type = [[Jamahiriya]]
