*Empty MediaWiki Message*

--- a/Peru.mw
+++ b/Peru.mw
@@ -15,6 +15,6 @@
 |official_languages       = 
 }}
 
-'''Peru''' ke naga lefasaneng la [[Amerika]]. Peru e bodikela ba [[Amerika]], e wela seleteng sa [[Amerika Borwa]].
+'''Peru''' ke naga lefasaneng la [[Amerika]]. Peru e bodikela bja [[Amerika]], e wela seleteng sa [[Amerika Borwa]].
 
 [[Setensele:Peru]]
