--- a/Afrikaans.mw
+++ b/Afrikaans.mw
@@ -1,4 +1,4 @@
-'''Afrikaans''' ke [[polelo]] yeo e setlogo sa ona elego [[Dutch]]. Afrikaans e bolelwa ke badudi ba [[Afrika Borwa]] le [[Namibia]], lege ena le baboledi ba mmalwa bao ba dulago [[Botswana]], [[Angola]], [[Swaziland]], [[Zimbabwe]], [[Lesotho]] le [[Zambia]]. 
+'''Afrikaans''' ke [[polelo]] yeo e setlogo sa ona elego [[Dutch]]. Afrikaans e bolelwa ke badudi ba [[Afrika Borwa]] le [[Namibia]], lege ena le baboledi ba mmalwa bao ba dulago [[Botswana]], [[Angola]], [[Swaziland]], [[Zimbabwe]], [[Lesotho]], [[United Kingdom]], [[Australia]] le [[Canada]]. 
 
 Afrikaans ye nngwe ya dipolelo tše lesome tee tša semmušô tša [[Afrika Borwa]].
 
