--- a/Tanzania.mw
+++ b/Tanzania.mw
@@ -2,7 +2,7 @@
 |+<big>'''Tanzania'''</big>
 | align="center" colspan="2"|
 {| border=0 cellpadding=2 cellspacing=0 style="background:#f9f9f9; text-align:center;"
-| width="130px"| [[Seswantšho:Flag_of_Tanzania.svg|125px|Flaga ya Tanzania]] || 
+| width="130px"| [[Seswantšho:Flag_of_Tanzania.svg|125px|Flaga ya Tanzania]] || [[File:Coat of arms of Tanzania.svg|100px]]
 |}
 |-
 | align=center colspan=2 style="background:#f9f9f9;" | [[Seswantšho:Tanzania in its region.svg|200px|Taetso ya Tanzania]]
