*Empty MediaWiki Message*

--- a/Kwena.mw
+++ b/Kwena.mw
@@ -1,5 +1,5 @@
 [[Seswantšho:NileCrocodile.jpg|right|thumb|250px|Dikwena]]
-
+[[File:Crocodylidae Distribution.png|thumb|550px|Distrubition of crocodiles]]
 == Kwena ==
 
 [[Setensele:Main category]]
