--- a/Somalia.mw
+++ b/Somalia.mw
@@ -2,7 +2,7 @@
 |+<big>'''Tanzania'''</big>
 | align="center" colspan="2"|
 {| border=0 cellpadding=2 cellspacing=0 style="background:#f9f9f9; text-align:center;"
-| width="130px"| [[Seswantšho:Flag_of_Somalia.svg|125px|Flaga ya Somalia]] || 
+| width="130px"| [[Seswantšho:Flag_of_Somalia.svg|125px|Flaga ya Somalia]] || [[File:Coat of arms of Somalia.png|right|150px]] 
 |}
 |-
 | align=center colspan=2 style="background:#f9f9f9;" | [[Seswantšho:Somalia in its region (claimed).svg|200px|Taetso ya Somalia]]
