*Empty MediaWiki Message*

--- a/Somalia.mw
+++ b/Somalia.mw
@@ -19,7 +19,8 @@
 
 Somalia e wela seleteng sa [[Afrika Bohlabela]].
 
-[[Setensele:Main category]]
+[[Setensele:Afrika Bohlabela|*]]
+[[Setensele:Afrika]]
 
 [[ace:Somalia]]
 [[af:Somalië]]
