*Empty MediaWiki Message*

--- a/Somalia.mw
+++ b/Somalia.mw
@@ -20,7 +20,7 @@
 Somalia e wela seleteng sa [[Afrika Bohlabela]].
 
 [[Setensele:Afrika Bohlabela|*]]
-[[Setensele:Afrika]]
+[[Setensele:Dinaga Afrika]]
 
 [[ace:Somalia]]
 [[af:Somalië]]
