--- a/Kenya.mw
+++ b/Kenya.mw
@@ -20,7 +20,7 @@
 
 '''Kenya''' ke naga yeo elego bohlabela bja [[Afrika]]. Kenya e bapane le [[Ethiopia]] goya lebowa, [[Somalia]] go ya lebowa bohlaba, [[Tanzania]] goya borwa, [[Uganda]] goya bodikela, le [[Sudan]] goya lebowa bodikela. [[Indian Ocean]] e bapile borwa bohlabela.
 
-[[Setensele:Main category]]
+[[Setensele:Afrika Bohlabela|*]]
 [[Setensele:Dinaga Afrika]]
 
 [[ace:Kenya]]
