*Empty MediaWiki Message*

--- a/Zambia.mw
+++ b/Zambia.mw
@@ -29,7 +29,8 @@
 
 Zambia e wela seleteng sa [[Afrika Bohlabela]].
 
-[[Setensele:Afrika|Zambia]]
+[[Setensele:Afrika Bohlabela|*]]
+[[Setensele:Dinaga Afrika]]
 
 [[af:Zambië]]
 [[als:Sambia]]
