*Empty MediaWiki Message*

--- a/Mozambique.mw
+++ b/Mozambique.mw
@@ -16,7 +16,7 @@
 
 '''Mozambique''', (Republic ya Mozambique) ke naga yeo elego lefasaneng la [[Afrika]]. Mozambique e e humanega borwa bohlabela ba [[Afrika]]. Bohlaba ba Mozambique ke [[Indian Ocean|Lewatle la India]], [[Tanzania]] go ya leboa, [[Malawi]] le [[Zambia]] goya leboa bodikela, [[Zimbabwe]] goya bodikela le [[Swaziland]] le [[Afrika Borwa]] goya borwa bodikela.
 
-[[Setensele:Afrika Bohlabela|*]]
+[[Setensele:Afrika Bohlabela|Dinaga]]
 [[Setensele:Dinaga Afrika]]
 
 [[af:Mosambiek]]
