--- a/Somalia.mw
+++ b/Somalia.mw
@@ -19,7 +19,7 @@
 
 Somalia e wela seleteng sa [[Afrika Bohlabela]].
 
-[[Setensele:Afrika Bohlabela|*]]
+[[Setensele:Afrika Bohlabela]]
 [[Setensele:Dinaga Afrika]]
 
 [[ace:Somalia]]
