*Empty MediaWiki Message*

--- a/Rwanda.mw
+++ b/Rwanda.mw
@@ -22,7 +22,7 @@
 
 Rwanda e wela seleteng sa [[Afrika Bohlabela]].
 
-[[Setensele:Main category]]
+[[Setensele:Afrika Bohlabela]]
 [[Setensele:Dinaga Afrika]]
 
 [[ace:Rwanda]]
