*Empty MediaWiki Message*

--- a/Seychelles.mw
+++ b/Seychelles.mw
@@ -19,6 +19,9 @@
 
 Seychelles e wela seleteng sa [[Afrika Bohlabela]].
 
+[[Setensele:Afrika Bohlabela]]
+[[Setensele:Dinaga Afrika]]
+
 [[af:Seychelle]]
 [[als:Seychellen]]
 [[am:ሲሸልስ]]
