*Empty MediaWiki Message*

--- a/Mayotte.mw
+++ b/Mayotte.mw
@@ -26,7 +26,8 @@
 
 '''Mayotte''' ke sehlôpha sa dihlakehlake tšeo dilego borwa bohlabela ba [[Afrika]], e wela seleteng sa [[Afrika Bohlabela]].
 
-[[Setensele:Main category]]
+[[Setensele:Afrika Bohlabela]]
+[[Setensele:Dinaga Afrika]]
 
 [[af:Mayotte]]
 [[als:Mayotte]]
