*Empty MediaWiki Message*

--- a/Mauritius.mw
+++ b/Mauritius.mw
@@ -17,7 +17,8 @@
 
 '''Mauritius''' ke sehlakehlake seo selego borwa bohlabela ba [[Afrika]], e wela seleteng sa [[Afrika Bohlabela]].
 
-[[Setensele:Main category]]
+[[Setensele:Afrika Bohlabela]]
+[[Setensele:Dinaga Afrika]]
 
 [[af:Mauritius]]
 [[als:Mauritius]]
