*Empty MediaWiki Message*

--- a/Malawi.mw
+++ b/Malawi.mw
@@ -18,7 +18,7 @@
 
 '''Malawi''' ke naga yeo elego lefasaneng la [[Afrika]]. Dinaga tšeo di bapanego le Malawi ke [[Zambia]] leboa bodikela, le [[Tanzania]] leboa, [[Mozambique]] bohlaba, borwa le bodikela.
 
-[[Setensele:Main category]]
+[[Setensele:Afrika Bohlabela]]
 [[Setensele:Dinaga Afrika]]
 
 [[af:Malawi]]
