*Empty MediaWiki Message*

--- a/Ethiopia.mw
+++ b/Ethiopia.mw
@@ -26,7 +26,7 @@
 * [[Djibouti]] (leboa bohlabela),
 * [[Somalia]] (bohlabela).
 
-[[Setensele:Main category]]
+[[Setensele:Afrika Bohlabela]]
 [[Setensele:Dinaga Afrika]]
 
 [[ace:Ethiopia]]
