--- a/Eritrea.mw
+++ b/Eritrea.mw
@@ -26,7 +26,7 @@ Cameroon e agišane le :
 * [[Ethiopia]] (borwa),
 * [[Djibouti]] (borwa bohlabela).
 
-[[Setensele:Main category]]
+[[Setensele:Afrika Bohlabela]]
 [[Setensele:Dinaga Afrika]]
 
 [[ace:Eritrea]]
