*Empty MediaWiki Message*

--- a/Uganda.mw
+++ b/Uganda.mw
@@ -41,7 +41,8 @@
 
 '''Uganda''' ke naga yeo elego lefasaneng la [[Afrika]].Dinaga tšeo di lego kgaufsi le Uganda, ke [[Tanzania]] yeo elego borwa, [[Democratic Republic of the Congo]] bodikela, [[Rwanda]] borwa bodikela, [[Zambia]] leboa bodikela le [[Kenya]] bohlabela.
 
-[[Setensele:Afrika|Uganda]]
+[[[Setensele:Afrika Bohlabela]]
+[[Setensele:Dinaga Afrika]]
 
 [[ace:Uganda]]
 [[af:Uganda]]
