*Empty MediaWiki Message*

--- a/Zambia.mw
+++ b/Zambia.mw
@@ -29,7 +29,7 @@
 
 Zambia e wela seleteng sa [[Afrika Bohlabela]].
 
-[[Setensele:Afrika Bohlabela|*]]
+[[Setensele:Afrika Bohlabela]]
 [[Setensele:Dinaga Afrika]]
 
 [[af:Zambië]]
