*Empty MediaWiki Message*

--- a/Sierra_Leone.mw
+++ b/Sierra_Leone.mw
@@ -2,7 +2,7 @@
 |conventional_long_name = Repabliki ya Sierra Leone
 |common_name = Sierra Leone
 |image_flag = Flag of Sierra Leone.svg
-|image_coat =
+|image_coat = Coat of arms of Sierra Leone.svg
 |image_map = LocationSierraLeone.svg
 |capital = [[Freetown]]
 |government_type = [[Republic|Repabliki]]
