*Empty MediaWiki Message*

--- a/Senegal.mw
+++ b/Senegal.mw
@@ -2,7 +2,7 @@
 |conventional_long_name   = Republic of Senegal
 |common_name             = Senegal
 |image_flag               = Flag of Senegal.svg
-|image_coat               =
+|image_coat               = Coat of arms of Senegal.svg
 |image_map                = LocationSenegal.svg
 |capital                  = [[Dakar]]
 |government_type          = [[Semi-presidential system|Semi-presidential repabliki]]
