*Empty MediaWiki Message*

--- a/São_Tomé_and_Príncipe.mw
+++ b/São_Tomé_and_Príncipe.mw
@@ -2,7 +2,7 @@
 |conventional_long_name   = Democratic Republiki ya São Tomé and Príncipe
 |common_name              = São Tomé le Príncipe
 |image_flag               = Flag of Sao Tome and Principe.svg
-|image_coat               =
+|image_coat               = Coa São Tomé & Príncipe.PNG
 |national_motto           = 
 |image_map                = LocationSaoTomeAndPrincipe.png
 |capital                  = [[São Tomé]]
