*Empty MediaWiki Message*

--- a/Sepedi_inthaneteng.mw
+++ b/Sepedi_inthaneteng.mw
@@ -1,9 +1,9 @@
 ==Methopo==
 
-Nyakišiša matlakala a Sepedi mo internet 1
+Nyakišiša matlakala a Sepedi mo inthaneteng 1
 [http://www.google.com/search?num=100&hl=en&client=opera&rls=en&hs=Xm8&q=sepedi++polelo+afrika+borwa&btnG=Search]
 
-Nyakišiša matlakala a Sepedi mo internet 2
+Nyakišiša matlakala a Sepedi mo inthaneteng 2
 [http://www.google.com/search?num=100&hl=en&client=opera&rls=en&q=sepedi+%C5%A1omi%C5%A1a+molao&btnG=Search]
 
 BOIKANOKAKARETŠO BJA DITOKELO TŠA BOTHO
@@ -11,20 +11,20 @@ BOIKANOKAKARETŠO BJA DITOKELO TŠA BOTHO
 Universal Declaration of Human rights
 [http://www.unhchr.ch/udhr/lang/srt.htm]
 
-Molaoteo wa Afrika Borwa (Constitution of South Africa)
+Molaotheo wa Afrika Borwa (Constitution of South Africa)
 [http://www.polity.org.za/polity/govdocs/constitution/languages/Sepedi.pdf] 
 
 
-TLHAKO YA MOLAOTSHEPETŠO WA POLELO YA BOSETŠHABAFile 
+TLHAKO YA MOLAOTSHEPETŠO WA POLELO YA BOSETŠHABA 
 [http://www.saps.gov.za/saps_profile/components/language_management/downloads/framework_sepedi.pdf] 
 
 
 LENANEO LA TIRAGATŠO LEGORATŠHOMO LA MOLAOTSHEPETŠO LA DIPOLELO 
-Bonnyane e tee go tšwa go sehlopha sa Sesotho (Sepedi, Sesotho,. Setswana);
+Bonnyane e tee ya dipolelo go tšwa sehlopheng sa Sesotho (Sepedi, Sesotho, Setswana);
 [http://www.saps.gov.za/saps_profile/components/language_management/downloads/implem_plan_sepedi.pdf] 
 
 
-T Mbeki: State of the Nation Address. Polelo ya Setšhaba ka Mopresidente wa Afrika Borwa, Thabo Mbeki:
+T Mbeki: State of the Nation Address. Thabo Mbeki: Polelo ya Pulo ya Palamente:
 [http://www.info.gov.za/speeches/son/sona_sepedi.htm] 
 
 
@@ -32,39 +32,39 @@ T Mbeki: State of the Nation Address. Polelo ya Setšhaba ka Mopresidente wa Afr
 [http://www.sahrc.org.za/sahrc_cms/downloads/PAIA%20GUIDE%20Sepedi.pdf] 
 
 
-Polelo e hlalša boleng bja rena. Mogopolo le maikutlo a motho le setshaba.
+Polelo e hlaloša boleng bja rena. Mogopolo le maikutlo a motho le setšhaba.
 [http://land.pwv.gov.za/journal/journal%204.html] 
 
 
-Department of Welfare
+Kgoro ya tša Leago
 [http://www.welfare.gov.za/Documents/2003/Info%20Manuals/sepedi.pdf] 
 
 
-School Examination Paper
+Letlakala la Tlhahlobo ya Sekolong
 [http://www.education.gpg.gov.za/matricinfo/2003past%20papers/Exam%20G/92911.doc] 
 
 
-School Examination Paper
+Letlakala la Tlhahlobo ya Sekolong
 [http://www.education.gpg.gov.za/Matric%20Info/qsupp2006/92923VQS2006.pdf] 
 
 
-Water Information
+Tshedimošo ka Meetse
 [http://www.dwaf.gov.za/Docs/NWRS/Information/SEPEDI%20INFO%20DOC.pdf] 
 
 
-Gambling Board
+Boto ya go Kempola
 [http://www.ggb.org.za/gambling/gamblinghome.nsf/Documents/Sepedi/$file/Sepedi.pdf] 
 
 
-Geographical names
+Maina a Mafelo
 [http://www.dac.gov.za/projects/heritage/geographical_names/information_brochure.htm] 
 
 
-Educational Curriculum Documents
+Ditokumente tša Kharikhulamo ya tša Thuto
 [http://www.education.gov.za/Curriculum/GET/doc/kaGae.pdf] 
 
 
-School Examination Paper
+Letlakala la Tlhahlobo ya Sekolong
 [http://www.education.gov.za/Schoolinfo/Info/All/SEPEDIHOMELANGUAGEP1QP.pdf] 
 
 
@@ -93,13 +93,13 @@ South African Qualifications Authority --Ke ka baka la eng Afrika Borwa e kgethi
 
 PUKWANA YA TLHALOSO YA MOLAO WA MAITSHWARO WA BAŠOMI BA TIRELO YA SETŠHABA.
 
-Handbook of conduct of people in public service
+Pukwana ya maitshwaro a batho bao ba lego tirelong ya setšhaba
 [http://www.psc.gov.za/docs/guidelines/SEPEDI.29.03.05.DOC] 
 
 
 Financial Advice
-Tebalelo Ya Motshelo Wa Dikgwebo Tse NnyaneFile 
-e ngwadilwego ka polelo ya kgetho ya gago, etela weposaete ya rena go šomisa tshelete e ntši go aba ditirelo go batho ba Afrika. 
+Tebalelo Ya Motšhelo Wa Dikgwebo Potlana
+e ngwadilwe ka polelo ya kgetho ya gago, etela wepsaete ya rena go šomisa tshelete e ntši go aba ditirelo go batho ba Afrika. 
 [http://www.sars.gov.za/Small%20Business%20Amnesty/Brochure/Sepedi.pdf] 
 
 
@@ -112,11 +112,11 @@ polelo ye e kwagalago ya hlohleletšo ya botsebi; tiišetšo ya thelete go tšwa
 [http://www.dme.gov.za/pdfs/minerals/sepedi_descriptions.pdf] 
 
 
-Go gona motho yoo a tshwenyegago Afrika Borwa. ...... A ke maina a dikgwedi ka SePedi. A ngwale dikgobeng tšeo diswanetšego mo. khalentareng. Jenuware ...
+Go gona motho yoo a tshwenyegago Afrika Borwa. ...... A ke maina a dikgwedi ka SePedi. A ngwale dikgobeng tšeo diswanetšego mo. khalentareng. Janeware ...
 [http://www.ukzn.ac.za/cae/alr/ALR%20Sesotho%20sa%20Leboa/ALRLWSSL.pdf] 
 
 
-This corpus kindly provided for the Dasher project by: De Schryver ...Maemo a polelo ??Atolosa dipolelo ka go oketsa ka matlhaodi le matlhalosi; ...... Se se raya tlhatloso ya maemo a botshelo jwa Ma-Afrika Borwa otlhe bogolo ...
+This corpus kindly provided for the Dasher project by: De Schryver ...Maemo a polelo ??Katološa dipolelo ka go oketša ka mahlaodi le mahlalosi; ...... Se se raya tlhatloso ya maemo a botshelo jwa Ma-Afrika Borwa otlhe bogolo ...
 [http://users.aims.ac.za/~mackay/dasher/training/training_Tswana_ZA.txt] 
 
 
