{{delete|wrong language, link spam ~~~~}}

--- a/Avril_Lavigne.mw
+++ b/Avril_Lavigne.mw
@@ -1,3 +1,4 @@
+{{delete|wrong language, link spam [[Mošomi:Xqt|Xqt]] ([[Boledišana le Mošomi:Xqt|talk]]) 06:52, 25 Phupu 2012 (SAST)}}
 '''Avril Lavigne''' is a Canadian singer-songwriter.<ref>http://www.allmusic.com/artist/avril-lavigne-mn0000762885</ref>
 
 <references/>
