--- a/Avril_Lavigne.mw
+++ b/Avril_Lavigne.mw
@@ -1,4 +1,5 @@
 {{delete|wrong language, link spam [[Mošomi:Xqt|Xqt]] ([[Boledišana le Mošomi:Xqt|talk]]) 06:52, 25 Phupu 2012 (SAST)}}
+[[File:Avril Lavigne in China - 1.jpg|thumb|Avril Lavigne in China - 1]]
 '''Avril Lavigne''' is a Canadian singer-songwriter.<ref>http://www.allmusic.com/artist/avril-lavigne-mn0000762885</ref>
 
 <references/>
