*Empty MediaWiki Message*

--- a/Avril_Lavigne.mw
+++ b/Avril_Lavigne.mw
@@ -1,6 +1,5 @@
-{{delete|wrong language, link spam [[Mošomi:Xqt|Xqt]] ([[Boledišana le Mošomi:Xqt|talk]]) 06:52, 25 Phupu 2012 (SAST)}}
-[[File:Avril Lavigne in China - 1.jpg|thumb|Avril Lavigne in China - 1]]
-'''Avril Lavigne''' is a Canadian singer-songwriter.<ref>http://www.allmusic.com/artist/avril-lavigne-mn0000762885</ref>
+[[File:Avril Lavigne in  China - 1.jpg|thumb|Avril Lavigne ale China]]
+'''Avril Lavigne''' ke mongwadi-seopedi sago tšwa Canada. Avril Lavigne o belegwe 27 [[Lewedi]] 1984.
 
 <references/>
 
