*Empty MediaWiki Message*

--- a/Turkey.mw
+++ b/Turkey.mw
@@ -2,7 +2,7 @@
 |conventional_long_name   = Republic of Turkey
 |common_name              = Turkey
 |image_flag               = Flag of Turkey.svg
-|image_map                = Turkey (orthographic projection).svg
+|image_map                = Turkey in its region.svg
 |capital                  = [[Ankara]]
 |government_type          = [[republic|repabliki]]   
 |leader_name1             = [[Recep Tayyip Erdoğan]]
