--- a/Morula.mw
+++ b/Morula.mw
@@ -25,11 +25,10 @@ Marula a topiwa ke basadi<ref>http://commons.wikimedia.org/wiki/File:PeopleAreKn
 [[Seswantšho:Mokgope3.jpg|thumb|right|Letlabo le šumišwa go tlaba marula]]
 Ge marula a sena go butšwa, letlabo le šumišwa go tlaba marula ka le tee le le tee, se se dirwa ke batho ba bararo goba go feta. Go tlabula marula go tšea diiri tše mmalwa ka ge go tlabwa ka le tee le le tee. Morago gage marula a tlabilwe, letlopetlope le tšhelwa pitšeng ya maoto a mararo.
 
-== Go kgobwa ==
+== Go kgobja ==
 
-Letlopetlope la kgobwa ka matsogo go fihlela go šala dikgeru. Letlopetlope le tšhelwa pitšeng ya letsopa, ya bitiela letšatši le tee. Morago ga letšatši morula sa ntše o nale swikiri e bile ga o se o bele. Ka se sebaka bana baka o nwa<ref>http://commons.wikimedia.org/wiki/File:PeopleAreKnowledge_Mokgope_Interview3.ogg</ref>.
-[[Seswantšho:Mokgope9.jpg|thumb|right|Letlopetlope la kgobwa]]
-
+Letlopetlope la kgobja ka matsogo go fihlela go šala dikgeru. Letlopetlope le tšhelwa pitšeng ya letsopa, ya bitiela letšatši le tee. Morago ga letšatši morula sa ntše o na le swikiri e bile ga o se o bele. Ka se sebaka bana ba ka o nwa<ref>http://commons.wikimedia.org/wiki/File:PeopleAreKnowledge_Mokgope_Interview3.ogg</ref>.
+[[Seswantšho:Mokgope9.jpg|thumb|right|Letlopetlope la kgobja]]
 
 == Lehlobe le sehlobo ==
 
