/* Marula a nwa ke bomang? */

--- a/Morula.mw
+++ b/Morula.mw
@@ -34,10 +34,9 @@ Letlopetlope la kgobja ka matsogo go fihlela go šala dikgeru. Letlopetlope le t
 
 Ka letšatši lago latela, pitša ya bitullwa, ka gare ena le lehlobe ka godimo ga sehlobo. Sekgo se šumišwa go kwa sehlobo. Pitša ya tswalelwa gape. Morago ga letšatši le tee, pitša ya bulwa gape, ka se sebaka, marula a eba a betše.
 
-== Marula a nwa ke bomang? ==
+== Morula a nwa ke bomang? ==
 
-Malome le Rakgadi ba bitšwa go tlo kwa marula ka sego. Ge ba kwile o kanwewa, ba bitša baagišane, le batho ka moka go tla gonwa marula. Gwa nama gwa gethwa motho wa go tlo gela marula. Motho yo (o bitšwa poo), o tla gobagela marula ka o tee ka o tee. Marula wago sala mo pitseng ke wa poo. Morula o thabelwa kudu ke bakgekolo le bakgalabje<ref>http://commons.wikimedia.org/wiki/File:PeopleAreKnowledge_Mogkope_Interview2.ogg</ref>.
-
+Malome le Rakgadi ba bitšwa go tlo kwa marula ka sego. Ge ba kwele o ka nwewa, ba bitša baagišane, le batho ka moka go tla go nwa morula. Gwa nama gwa gethwa motho wa go tlo gela morula. Motho yo (o bitšwa poo), o tla gobagela marula ka o tee ka o tee. Morula wa go šala mo pitseng ke wa poo. Morula o thabelwa kudu ke bakgekolo le bakgalabje<ref>http://commons.wikimedia.org/wiki/File:PeopleAreKnowledge_Mogkope_Interview2.ogg</ref>.
 
 == Mothopo ==
 <references/>
