/* Tsela yago rathola Morula */

--- a/Morula.mw
+++ b/Morula.mw
@@ -9,7 +9,7 @@ Morula o humanega magareng ga [[Hlakola]] le [[Moranang]]<ref>http://commons.wik
 
 * Go dirwa serobe
 * Go tlabulwa marula
-* Letlopetlope la kgobwa
+* Letlopetlope la kgobja
 * Lehlobe le sehlobo
 
 Ke setšo, morwarra wa rathodi wa marula ke motho wa pele wo a tlilego go nwa morula.
