/* Go tlabula Marula */

--- a/Morula.mw
+++ b/Morula.mw
@@ -22,8 +22,8 @@ Marula a topiwa ke basadi<ref>http://commons.wikimedia.org/wiki/File:PeopleAreKn
 
 == Go tlabula Marula ==
 
-[[Seswantšho:Mokgope3.jpg|thumb|right|Letlabo le šumišwa go tlaba marula]]
-Ge marula a sena go butšwa, letlabo le šumišwa go tlaba marula ka le tee le le tee, se se dirwa ke batho ba bararo goba go feta. Go tlabula marula go tšea diiri tše mmalwa ka ge go tlabwa ka le tee le le tee. Morago gage marula a tlabilwe, letlopetlope le tšhelwa pitšeng ya maoto a mararo.
+[[Seswantšho:Mokgope3.jpg|thumb|right|Letlabo le šomišwa go tlaba marula]]
+Ge marula a sena go butšwa, letlabo le šomišwa go tlaba marula ka le tee le le tee, se se dirwa ke batho ba bararo goba go feta. Go tlabula marula go tšea diiri tše mmalwa ka ge go tlabja ka le tee le le tee. Morago gage marula a tlabilwe, letlopetlope le tšhelwa pitšeng ya maoto a mararo.
 
 == Go kgobja ==
 
