/* Serobe sa Marula */

--- a/Morula.mw
+++ b/Morula.mw
@@ -16,9 +16,9 @@ Ke setšo, morwarra wa rathodi wa marula ke motho wa pele wo a tlilego go nwa mo
 
 == Serobe sa Marula ==
 [[Seswantšho:Mokgope2.jpg|thumb|right|Serobe]]
-Marula ke dienywa tša go humanega mohlareng. Mohlare wa morula gola gokaba dimitara tše [[18 (nomoro)|lesome seswai]]. Seenywa se ga se kgiwe mohlareng, batho ba emala gore seenywa se se wele fase pele se jewa.
+Marula ke dienywa tša go humanega mohlareng. Mohlare wa morula o gola go kaba dimitara tše [[18 (nomoro)|lesome seswai]]. Seenywa se ga se kgewe mohlareng, batho ba emela gore seenywa se se wele fase pele se jewa.
 
-Marula a topiwa ke basadi<ref>http://commons.wikimedia.org/wiki/File:PeopleAreKnowledge_Mogkope_Interview2.ogg</ref> fase ga mohlare, gwa dirwa serobe.Go topa Marula go tšea matšatši a mabedi goba go feta. Ge marula a topilwe, serobe sago kgagala se dirilwe, Marula a hlogelwa go fihlela a butšwa. Se seka tšea matšatsši a [[4 (nomoro)|mane]] goba go feta, go tlaya ka boema bja bosa.
+Marula a topiwa ke basadi<ref>http://commons.wikimedia.org/wiki/File:PeopleAreKnowledge_Mogkope_Interview2.ogg</ref> fase ga mohlare, gwa dirwa serobe.Go topa Marula go tšea matšatši a mabedi goba go feta. Ge marula a topilwe, serobe sa go kgagala se dirilwe, Marula a tlogelwa go fihlela a butšwa. Se se ka tšea matšatsši a [[4 (nomoro)|mane]] goba go feta, go tla ya ka boema bja bosa.
 
 == Go tlabula Marula ==
 
