/* Lehlobe le sehlobo */

--- a/Morula.mw
+++ b/Morula.mw
@@ -32,7 +32,7 @@ Letlopetlope la kgobja ka matsogo go fihlela go šala dikgeru. Letlopetlope le t
 
 == Lehlobe le sehlobo ==
 
-Ka letšatši lago latela, pitša ya bitullwa, ka gare ena le lehlobe ka godimo ga sehlobo. Sekgo se šumišwa go kwa sehlobo. Pitša ya tswalelwa gape. Morago ga letšatši le tee, pitša ya bulwa gape, ka se sebaka, marula a eba a betše.
+Ka letšatši la go latela, pitša ya bitullwa, ka gare ena le lehlobe ka godimo ga sehlobo. Sego se šomišwa go kwa sehlobo. Pitša ya tswalelwa gape. Morago ga letšatši le tee, pitša ya bulwa gape, ka se sebaka, marula a eba a betše.
 
 == Morula a nwa ke bomang? ==
 
