*Empty MediaWiki Message*

--- a/Morocco.mw
+++ b/Morocco.mw
@@ -3,7 +3,7 @@
 |common_name              = Morocco
 |image_flag               = Flag of Morocco.svg
 |image_coat               = Coat of arms of Morocco.png
-|image_map                = Morocco in its region (all claimed).svg
+|image_map                = Morocco in its region (de-facto and disputed hatched).svg
 |capital                  = [[Rabat]]
 |government_type          = [[Constitutional monarchy]]
 |leader_name1             = [[Mohammed VI of Morocco|Mohammed VI]]
