--- a/2013.mw
+++ b/2013.mw
@@ -1,6 +1,6 @@
 {{Year nav|2013}} 
 
-'''2013''' [[Dinomoro tša Maroma|(MMXIII)]] e tloba [[ngwaga]] wago thoma ka [[Labobedi]] ebile ke ngwaga wa bone wa [[ngwagasome]] wa [[2010s]].
+'''2013''' [[Dinomoro tša Maroma|(MMXIII)]] e tloba [[ngwaga]] wago thoma ka [[Labobedi]] ebile ke ngwaga wa bone wa [[ngwagasome]] wa [[2010s]]. 2013 e tloba ngwaga wa pele wa goba le dinomoro tša go fapana, go tloga ngwageng wa 1987.
 
 
  
