--- a/1994.mw
+++ b/1994.mw
@@ -2,7 +2,7 @@
 
 
 
-'''1994'' [[Dinomoro tša Maroma|(MCMXCIV)]] ke [[Ngwaga wago tlwaelega]] [[Ngwaga wago tlwaelega wago thoma ka Mokibelo|wago thoma ka Mokibelo]].
+'''1994''' [[Dinomoro tša Maroma|(MCMXCIV)]] ke [[Ngwaga wago tlwaelega]] [[Ngwaga wago tlwaelega wago thoma ka Mokibelo|wago thoma ka Mokibelo]].
 
 
 
