--- a/Ho_Chi_Minh_City.mw
+++ b/Ho_Chi_Minh_City.mw
@@ -2,5 +2,196 @@
 '''Ho Chi Minh City''' ke mmasepala wa [[Dong Nam Bo]], [[Vietnam]]. Mmasepala wo o nale badudi bao e kabago 7,302,755.
 
 [[Setensele:Vietnam]]
+
 [[en:Ho Chi Minh City]]
 [[de:Ho Chi Minh City]]
+[[ace:Kota Ho Chi Minh]]
+[[af:Ho Chi Minh-stad]]
+[[ak:Ho Chi Minh City]]
+[[als:Ho-Chi-Minh-Stadt]]
+[[am:ሆ ቺ ሚን ከተማ]]
+[[ar:هو تشي منه (مدينة)]]
+[[an:Ciudat Ho Chi Minh]]
+[[roa-rup:Ho Chi Minh City]]
+[[frp:Ho Chi Minh Vela]]
+[[ast:Ciudad Ho Chi Minh]]
+[[gn:Táva Ho Chi Minh]]
+[[ay:Ho Chi Min marka]]
+[[az:Hoşimin]]
+[[bm:Ho Chi Minh-Ville]]
+[[bn:হো চি মিন সিটি]]
+[[bjn:Ho Chi Minh City]]
+[[zh-min-nan:Hồ Chí Minh Chhī]]
+[[map-bms:Kota Ho Chi Minh]]
+[[be:Горад Хашымін]]
+[[bcl:Ho Chi Minh City]]
+[[bi:Ho Chi Minh City]]
+[[bg:Хошимин]]
+[[bar:Ho-Chi-Minh-Stadt]]
+[[bo:ཧོ་ཀྲི་མིན་གྲོང་ཁྱེར།]]
+[[bs:Ho Ši Min Grad]]
+[[br:Kêr Ho-Chi-Minh]]
+[[ca:Ciutat Ho Chi Minh]]
+[[cv:Хошимин]]
+[[cs:Ho Či Minovo Město]]
+[[ch:Ho Chi Minh]]
+[[cbk-zam:Ciudad Ho Chi Minh]]
+[[tum:Ho Chi Minh City]]
+[[cy:Dinas Ho Chi Minh]]
+[[da:Ho Chi Minh-byen]]
+[[pdc:Ho Chi Minh-Schtadt]]
+[[nv:Ho Chi Min Sídii]]
+[[dsb:Ho Chi Minh město]]
+[[et:Hồ Chí Minh (linn)]]
+[[el:Χο Τσι Μινχ (πόλη)]]
+[[eml:Ho Chi Minh City]]
+[[es:Ciudad Ho Chi Minh]]
+[[eo:Ho-Ĉi-Min-urbo]]
+[[ext:Ciá Ho Chi Minh]]
+[[eu:Saigon]]
+[[ee:Ho Chi Minh City]]
+[[fa:هوشی‌مین (شهر)]]
+[[hif:Ho Chi Minh City]]
+[[fo:Ho Chi Minh City]]
+[[fr:Hô-Chi-Minh-Ville]]
+[[fy:Ho Chi Minh stêd]]
+[[ff:Ho Chi Minh City]]
+[[ga:Cathair Ho Chi Minh]]
+[[gv:Caayr Ho Chi Minh]]
+[[gd:Ho Chi Minh (baile)]]
+[[gl:Cidade Ho Chi Minh - Thành phố Hồ Chí Minh]]
+[[gan:胡志明市]]
+[[ko:호찌민 시]]
+[[hy:Հոշիմին]]
+[[hi:हो ची मिन्ह शहर]]
+[[hsb:Ho Chi Minh město]]
+[[hr:Ho Ši Min (grad)]]
+[[io:Ho Chi Minh urbo]]
+[[ig:Ho Chi Minh City]]
+[[ilo:Ciudad ti Ho Chi Minh]]
+[[id:Kota Hồ Chí Minh]]
+[[ia:Ho Chi Minh Citate]]
+[[ie:Ho Chi Minh Cité]]
+[[ik:Ho Chi Minh City]]
+[[os:Хошимин]]
+[[zu:IHochiminh]]
+[[is:Ho Chi Minh-borg]]
+[[it:Ho Chi Minh (città)]]
+[[he:הו צ'י מין סיטי]]
+[[jv:Kutha Ho Chi Minh]]
+[[kl:Ho Chi Minh Illoqarfik]]
+[[pam:Ho Chi Minh Lakanbalen]]
+[[ka:ხოშიმინი]]
+[[csb:Ho Chi Minh City]]
+[[kw:Cita Ho Chi Minh]]
+[[rw:Ho Chi Minh (umujyi)]]
+[[sw:Mji wa Ho Chi Minh]]
+[[kg:Ho Chi Minh City]]
+[[ht:Hô-Chi-Minh-Vil]]
+[[ku:Ho Chi Minh City]]
+[[lad:Sivdad Ho Chi Minh]]
+[[lez:Хошимин]]
+[[la:Hochiminhopolis]]
+[[lv:Hošimina]]
+[[lb:Ho Chi Minh City]]
+[[lt:Hošiminas]]
+[[lij:Ho Chi Minh Cittæ]]
+[[li:Ho Chi Minhstad]]
+[[ln:Ho Chi Minh Engumba]]
+[[jbo:Ho Chi Minh tcadu]]
+[[lg:Ho Chi Minh City]]
+[[lmo:Cità de Ho Chi Minh]]
+[[hu:Ho Si Minh-város]]
+[[mg:Hô-Chi-Minh-Ville]]
+[[ml:ഹോ ചി മിൻ നഗരം]]
+[[mt:Ho Chi Minh (belt)]]
+[[mi:Ho Chi Minh City]]
+[[mr:हो चि मिन्ह सिटी]]
+[[arz:هو تشى مينه]]
+[[ms:Bandar Raya Ho Chi Minh]]
+[[mwl:Ho Chi Minh Cidade]]
+[[mdf:Хошимин]]
+[[mn:Хо Ши Мин хот]]
+[[my:ဟိုချီမင်းစီးတီး]]
+[[nah:Āltepētl Ho Chi Minh]]
+[[na:Ho Chi Minh City]]
+[[nl:Ho Chi Minhstad]]
+[[nds-nl:Ho Chi Minh (stad)]]
+[[ja:ホーチミン市]]
+[[nap:Ho Chi Minh (cità)]]
+[[frr:Ho Chi Minh-stää]]
+[[pih:Ho Chi Minh City]]
+[[no:Ho Chi Minh-byen]]
+[[nn:Ho Chi Minh-byen]]
+[[nrm:Ho Chi Minh Ville]]
+[[nov:Ho Chi Minh City]]
+[[oc:Ho Chi Minh (ciutat)]]
+[[mhr:Хошимин]]
+[[uz:Xoshimin]]
+[[pfl:Ho-Chi Minh-Schdadt]]
+[[pap:Saigon]]
+[[km:ក្រុងព្រៃនគរ]]
+[[pcd:Ho Chi Minh Vile]]
+[[pms:Ho Chi Minh City]]
+[[tpi:Ho Chi Minh City]]
+[[nds:Ho-Chi-Minh-Stadt]]
+[[pl:Ho Chi Minh (miasto)]]
+[[pt:Cidade de Ho Chi Minh]]
+[[kaa:Ho Chi Minh City]]
+[[crh:Ho Şi Min]]
+[[ro:Ho Și Min (oraș)]]
+[[rmy:Ho Chi Minh City]]
+[[rm:Citad Ho Chi Minh]]
+[[qu:Ho Chi Minh llaqta]]
+[[ru:Хошимин]]
+[[se:Hồ Chí Minh gávpot]]
+[[sm:Ho Chi Minh City]]
+[[sg:Ho Chi Minh City]]
+[[sc:Ho Chi Minh (Tzitade)]]
+[[sco:Ho Chi Minh Ceety]]
+[[stq:Ho-Chi-Minh-Stääd]]
+[[st:Ho Chi Minh City]]
+[[tn:Ho Chi Minh City]]
+[[sq:Ho-Chi-Minh-Qytet]]
+[[scn:Ho Chi Minh City]]
+[[simple:Ho Chi Minh City]]
+[[sk:Hočiminovo Mesto]]
+[[sl:Hošiminh]]
+[[szl:Ho Chi Minh (mjasto)]]
+[[srn:Ho Chi Minh City]]
+[[sr:Град Хо Ши Мин]]
+[[sh:Ho Chi Minh (grad)]]
+[[su:Kota Ho Chi Minh]]
+[[fi:Hồ Chí Minhin kaupunki]]
+[[sv:Ho Chi Minh-staden]]
+[[tl:Lungsod ng Ho Chi Minh]]
+[[ta:ஹோ சி மின் நகரம்]]
+[[kab:Ho Chi Minh City]]
+[[roa-tara:Ho Chi Minh (cetate)]]
+[[tt:Хошимин]]
+[[tet:Ho Chi Minh City]]
+[[th:นครโฮจิมินห์]]
+[[chy:Ho Chi Minh City]]
+[[tr:Ho Chi Minh Kenti]]
+[[tk:Ho Şi Miň Şäheri]]
+[[tw:Ho Chi Minh City]]
+[[udm:Хошимин]]
+[[bug:Ho Chi Minh City]]
+[[uk:Хошимін]]
+[[ur:ہو چی من]]
+[[ug:سايگون]]
+[[za:Ho Chi Minh Si]]
+[[vec:Ho Chi Minh City]]
+[[vep:Hošimin]]
+[[vi:Thành phố Hồ Chí Minh]]
+[[fiu-vro:Ho Chi Minh]]
+[[wa:Hô Chí Minh Veye]]
+[[war:Syudad han Ho Chi Minh]]
+[[wo:Ho Chi Minh City]]
+[[wuu:胡志明市]]
+[[yi:הא טשי מין שטאט]]
+[[zh-yue:胡志明市]]
+[[diq:Ho Chi Minh (bacar)]]
+[[zea:Ho Chi Minh stad]]
+[[bat-smg:Hošėmins]]
+[[zh:胡志明市]]
